--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^1.0.1",
+    "@heroicons/react": "^1.0.2",
+    "chart.js": "^3.4.1",
     "next": "11.0.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-chartjs-2": "^3.0.4",
+    "react-dom": "17.0.2",
+    "recharts": "^2.0.10"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
