--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "17.0.2",
     "react-chartjs-2": "^3.0.4",
     "react-dom": "17.0.2",
-    "recharts": "^2.0.10"
+    "react-redux": "^7.2.4",
+    "recharts": "^2.0.10",
+    "redux": "^4.1.1"
   },
   "devDependencies": {
     "@types/react": "17.0.11",
